# jetbot_VLA_ROS_Humble

./: .gitignore  CLAUDE.md  IDEA.md  README.md  action_plan.md  brain_research_report.md  isaac_sim_setup.md  launch_guide.md  research_report.md
ros_ws/src/jetbot_base/: README.md  package.xml  setup.py
ros_ws/src/jetbot_base/config/: ekf.yaml  joy_controller.yaml  robot_params.yaml  twist_mux.yaml
ros_ws/src/jetbot_base/jetbot_base/: joy_controller.py  motor_driver.py  motor_interface.py  teleop.py
ros_ws/src/jetbot_base/launch/: bringup.launch.py
ros_ws/src/jetbot_description/: CMakeLists.txt  README.md  package.xml
ros_ws/src/jetbot_description/launch/: display.launch.py
ros_ws/src/jetbot_description/rviz/: jetbot.rviz
ros_ws/src/jetbot_description/urdf/: jetbot.urdf
ros_ws/src/jetbot_governor/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/jetbot_governor/jetbot_governor/: mock_lidar_publisher.py  predictive_governor.py
ros_ws/src/jetbot_governor/test/: test_predictive_governor.py
ros_ws/src/jetbot_nav/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/jetbot_nav/config/: nav2_params.yaml
ros_ws/src/jetbot_nav/jetbot_nav/: ground_plane_projector.py  mode_arbiter.py
ros_ws/src/jetbot_nav/launch/: nav.launch.py
ros_ws/src/jetbot_slam/: CMakeLists.txt  README.md  package.xml
ros_ws/src/jetbot_slam/launch/: slam.launch.py
ros_ws/src/jetbot_vision/: README.md  package.xml  setup.cfg  setup.py  setup_vision_env.sh
ros_ws/src/jetbot_vision/config/: camera_calibration.example.yaml
ros_ws/src/jetbot_vision/jetbot_vision/: camera_node.py  mock_camera_publisher.py  mock_detection_publisher.py  yolo_detector.py
ros_ws/src/jetbot_vla_bridge/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/jetbot_vla_bridge/jetbot_vla_bridge/: vla_client_bridge.py
simulation/: mock_vla_server.py  sim_test_suite.md  twist_mux_sim.yaml
