<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetbot_nav</name>
  <version>0.1.0</version>
  <description>
    Traditional (Nav2-based) navigation for JetBot: projects camera
    detections onto the ground plane as costmap obstacles, feeding Nav2's
    controller/planner stack. Its output (cmd_vel_nav) is one of three
    sources jetbot_base's motor_driver arbitrates between, selected by
    joy_controller's mode.
  </description>
  <maintainer email="deveshwarh@gmail.com">Deveshwar</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>vision_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
